--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
             </p>
 
             <p class="text-gray-600 leading-relaxed">
-                A participação ativa da comunidade na criação de produtos e serviços gera valor concreto, já que os benefícios são definidos pelos próprios cooperados. O foco é garantir que os serviços oferecidos estejam 100% alinhados às demandas reais.
+                A participação ativa da comunidade na criação de produtos e serviços gera valor concreto, já que os benefícios são definidos pelos próprios associados O foco é garantir que os serviços oferecidos estejam 100% alinhados às demandas reais.
             </p>
 
             <div class="bg-green-50 border-l-4 border-[#3FA110] p-5 rounded-r-lg shadow-sm">
@@ -1143,6 +1143,7 @@
     </script>
 </body>
 </html>
+
 
 
 
